--- a/client/stocklinx app/src/components/gridTable/tableToolbar/tableToolbar.scss
+++ b/client/stocklinx app/src/components/gridTable/tableToolbar/tableToolbar.scss
@@ -16,6 +16,7 @@
     align-items: center;
     gap: 10px;
     justify-content: flex-start;
+    flex-wrap: wrap;
     .gridtable__toolbar__actions__last {
       display: flex;
       margin-left: auto;
